# chess_bots

./: .gitignore  Cargo.toml  Dockerfile  build.rs
.github/workflows/: deploy.yml
proto/: chess_bot.proto
src/: main.rs  stockfish_manager.rs
src/config/: mod.rs
