[package]
name = "chess-bots"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }
stockfish = "0.2"
shakmaty = "0.30.0"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.11"
