[package]
name = "chess-bots"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }
stockfish = "0.2"
shakmaty = "0.30.0"
dotenv = "0.15.0"
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }
async-trait = "0.1"
num_cpus = "1.16"

[build-dependencies]
tonic-build = "0.11"
